<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBicicletas">

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txNumSerie" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txNumSerie" />

    <EditText
        android:id="@+id/txMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txModelo"
        app:layout_constraintTop_toBottomOf="@+id/imaheAddBike"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txNumSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numeroserie"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btGuardar"
        app:layout_constraintTop_toBottomOf="@+id/txStock"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/color"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txTalla"
        app:layout_constraintTop_toBottomOf="@+id/txPrecio"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txPlatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/platos"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txStock"
        app:layout_constraintTop_toBottomOf="@+id/txTalla"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stock"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txNumSerie"
        app:layout_constraintTop_toBottomOf="@+id/txPlatos"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txPrecio"
        app:layout_constraintTop_toBottomOf="@+id/txMarca"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txTalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/talla"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txPlatos"
        app:layout_constraintTop_toBottomOf="@+id/txColor"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/txPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txColor"
        app:layout_constraintTop_toBottomOf="@+id/txModelo"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/imaheAddBike"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txMarca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_directions_bike_black"
        tools:srcCompat="@drawable/ic_directions_bike_black" />

    <Button
        android:id="@+id/btSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Seleccionar"
        app:layout_constraintBottom_toTopOf="@+id/txMarca"
        app:layout_constraintStart_toEndOf="@+id/imaheAddBike" />

</androidx.constraintlayout.widget.ConstraintLayout>